# quadruped_robot

./: README.md
prd/: web_gamepad.md
src/quadruped_bringup/launch/: hardware.launch.py  sim.launch.py
src/quadruped_control/: CMakeLists.txt
src/quadruped_control/src/: mcu_bridge.py
src/quadruped_description/urdf/: quadruped.urdf.xacro
src/quadruped_gait/: setup.py
src/quadruped_gait/config/: servo_trims.yaml
src/quadruped_gait/quadruped_gait/: body_pose.py  gait_node.py  gait_planner.py  gestures.py  hardware_bridge.py  kinematics.py  stm32_bridge.py  teleop_key.py
tools/: calibrate.py
